--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
     "debowerify": "^1.3.1",
     "del": "^2.2.0",
     "eslint-plugin-react": "^3.6.3",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-eslint": "^1.1.1",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-jsx-coverage": "^0.3.5",
-    "gulp-mocha": "^2.1.3",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.x",
@@ -39,25 +38,17 @@
     "gulp-uglify": "^1.2.0",
     "gulp-util": "^3.0.6",
     "history": "^1.17.0",
-    "humps": "^1.0.0",
-    "istanbul": "^0.4.0",
     "jsdom": "3.1.2",
     "lodash": "^3.10.0",
-    "mocha": "^2.3.3",
     "react": "^0.14.x",
     "react-addons-test-utils": "^0.14.0",
     "react-document-title": "^2.0.1",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc1",
-    "reflux": "^0.3.0",
     "run-sequence": "^1.1.1",
-    "should": "^8.0.0",
-    "sinon": "^1.17.1",
-    "superagent": "^1.2.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.x",
-    "when": "^3.7.4",
-    "yargs": "^3.27.0"
+    "when": "^3.7.4"
   },
   "scripts": {
     "lint": "gulp lint",
